[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4"]
build-backend = "scikit_build_core.build"

[project]
name = "pyntv2"
version = "0.1.6"
description = "Python bindings for AJA's libajantv2 SDK"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pytest>=8"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
markers = [
    "hardware: requires AJA hardware (deselected by default)",
    "benchmark: DMA throughput benchmarks (use with hardware marker)",
]
addopts = "-m 'not hardware'"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/pyntv2"]
