[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4"]
build-backend = "scikit_build_core.build"

[project]
name = "pydecklink"
version = "0.1.17"
description = "Python bindings for Blackmagic DeckLink SDK"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pytest>=8"]

[dependency-groups]
dev = ["pytest>=8", "mypy>=1.13"]

[tool.pytest.ini_options]
markers = [
    "hardware: requires DeckLink hardware (deselected by default)",
]
addopts = "-m 'not hardware'"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/pydecklink"]

[[tool.mypy.overrides]]
module = "pydecklink._bindings"
ignore_missing_imports = true

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/pydecklink"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
DECKLINK_SDK_DIR = {env = "DECKLINK_SDK_DIR", default = "vendor/Blackmagic DeckLink SDK 15.3/Linux/include"}
